<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="main_menu_title">My Nanodegree Apps!</string>

    <string name="button_1_title">Spotify Streamer</string>
    <string name="button_2_title">Scores App</string>
    <string name="button_3_title">Library App</string>
    <string name="button_4_title">Build It Bigger</string>
    <string name="button_5_title">XYZ Reader</string>
    <string name="button_6_title">Capstone: My Own App</string>

    <string name="button_1_message">This button will launch my Spotify streamer!</string>
    <string name="button_2_message">This button will launch my scores app!</string>
    <string name="button_3_message">This button will launch my library app!</string>
    <string name="button_4_message">This button will launch my Build It Bigger app!</string>
    <string name="button_5_message">This button will launch my XYZ reader!</string>
    <string name="button_6_message">This button will launch my capstone app</string>
</resources>
