<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_50"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/main_menu_title"
            android:textColor="@color/blue_900" />

        <Button
            android:id="@+id/button1"
            style="@style/Level1Button"
            android:text="@string/button_1_title" />

        <Button
            android:id="@+id/button2"
            style="@style/Level1Button"
            android:text="@string/button_2_title" />

        <Button
            android:id="@+id/button3"
            style="@style/Level1Button"
            android:text="@string/button_3_title" />

        <Button
            android:id="@+id/button4"
            style="@style/Level1Button"
            android:text="@string/button_4_title" />

        <Button
            android:id="@+id/button5"
            style="@style/Level1Button"
            android:text="@string/button_5_title" />

        <Button
            android:id="@+id/button6"
            style="@style/Level2Button"
            android:text="@string/button_6_title" />
    </LinearLayout>
</ScrollView>
